# nitz

./: .env.global  .gitignore  .gitmodules  .pylintrc  README.md  data.json  db.py  docker-compose.yaml  mongo-init.js  pyproject.toml  service.py
.github/workflows/: api-tests.yml  ci.yaml  python-linter.yaml
api/: Dockerfile  open-webui.sh  requirements.txt
api/conf/: leaky_bucket.lua
api/src/: main.py
api/src/di/: dependencies.py  settings.py
api/src/models/db/: tables.py
api/src/rate_limiter/: rate_limiter.py
api/src/reporter/: models.py  router.py  service.py
api/src/riot_games/: models.py  router.py  service.py
api/src/riot_games_api/: riot_routes.py  router.py  service.py
api/src/scraper/: exceptions.py  models.py  router.py  service.py  utils.py
api/src/tests/reporter/: test_service.py
api/src/traffic_managment/: async_leaky_bucket.py  leaky_bucket.py  riot_limiter.py
api/tests/: scraper_test.py
infra/airflow/: docker-compose.yaml
infra/airflow/config/: airflow.cfg
infra/dataloader/: Dockerfile  loader.sh
infra/mongodb/: mongo-init.js
infra/nginx/: nginx.conf
infra/postgres/: Dockerfile
infra/postgres/init-scripts/: init-db.sql
infra/scraper/: Dockerfile  requirements.txt
infra/scraping-service/: requirements.txt
infra/scraping-service/src/: main.py
src/: main.py
src/api/: db.py  service.py
src/api/matches/: router.py
src/api/summoners/: router.py
src/di/: dependencies.py  main.py
src/matches/: router.py
src/mongo/: db.py  router.py  service.py
src/summoners/: router.py
(+43 files in other folders)
